tests/NormalTests/paczka1/fuzzy1/47177627.err
Error in line 4: Hz9AZs7b A519 37,9
Error in line 1: fxin4tx6WZ A519 64,4
Error in line 5: Hz9AZs7b A482 54,8
Error in line 7: fxin4tx6WZ A482 78,9
Error in line 10: fxin4tx6WZ S993 85,2
Error in line 22: A519 S420 66,64
Error in line 21: ZIs S993 11,2
Error in line 35: Hz9AZs7b S993 -1,4
Error in line 37: mYUA S993 13,3
